build_log_37.txt
[ 16%] Built target shaders_spirv
[ 18%] Building CXX object CMakeFiles/sisterapp.dir/src/ui/ui_layer.cpp.o
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/ui/ui_layer.cpp: In member function ‘void ui::UiLayer::drawMenuBar(ui::UiFrameContext&)’:
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/ui/ui_layer.cpp:124:26: warning: unused variable ‘requestReset’ [-Wunused-variable]
  124 |                     bool requestReset = false;
      |                          ^~~~~~~~~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/ui/ui_layer.cpp: In member function ‘void ui::UiLayer::drawFiniteTools(ui::UiFrameContext&)’:
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/ui/ui_layer.cpp:436:32: error: ‘scale’ was not declared in this scope; did you mean ‘scalb’?
  436 |             if (preset == 0) { scale = 0.001f; amplitude = 40.0f; }      // Plains
      |                                ^~~~~
      |                                scalb
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/ui/ui_layer.cpp:436:48: error: ‘amplitude’ was not declared in this scope
  436 |             if (preset == 0) { scale = 0.001f; amplitude = 40.0f; }      // Plains
      |                                                ^~~~~~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/ui/ui_layer.cpp:437:32: error: ‘scale’ was not declared in this scope; did you mean ‘scalb’?
  437 |             if (preset == 1) { scale = 0.002f; amplitude = 80.0f; }      // Hills
      |                                ^~~~~
      |                                scalb
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/ui/ui_layer.cpp:437:48: error: ‘amplitude’ was not declared in this scope
  437 |             if (preset == 1) { scale = 0.002f; amplitude = 80.0f; }      // Hills
      |                                                ^~~~~~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/ui/ui_layer.cpp:438:32: error: ‘scale’ was not declared in this scope; did you mean ‘scalb’?
  438 |             if (preset == 2) { scale = 0.003f; amplitude = 180.0f; }     // Mountains
      |                                ^~~~~
      |                                scalb
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/ui/ui_layer.cpp:438:48: error: ‘amplitude’ was not declared in this scope
  438 |             if (preset == 2) { scale = 0.003f; amplitude = 180.0f; }     // Mountains
      |                                                ^~~~~~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/ui/ui_layer.cpp:439:32: error: ‘scale’ was not declared in this scope; did you mean ‘scalb’?
  439 |             if (preset == 3) { scale = 0.004f; amplitude = 250.0f; }     // Alpine
      |                                ^~~~~
      |                                scalb
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/ui/ui_layer.cpp:439:48: error: ‘amplitude’ was not declared in this scope
  439 |             if (preset == 3) { scale = 0.004f; amplitude = 250.0f; }     // Alpine
      |                                                ^~~~~~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/ui/ui_layer.cpp:470:51: warning: conversion from ‘int’ to ‘float’ may change value [-Wconversion]
  470 |                 float cx = ctx.finiteMap->getWidth() / 2.0f;
      |                            ~~~~~~~~~~~~~~~~~~~~~~~^~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/ui/ui_layer.cpp:471:52: warning: conversion from ‘int’ to ‘float’ may change value [-Wconversion]
  471 |                 float cz = ctx.finiteMap->getHeight() / 2.0f;
      |                            ~~~~~~~~~~~~~~~~~~~~~~~~^~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/ui/ui_layer.cpp:475:63: warning: conversion from ‘int’ to ‘float’ may change value [-Wconversion]
  475 |                 ctx.camera.setDistance(ctx.finiteMap->getWidth() * 0.8f); // Fit view
      |                                        ~~~~~~~~~~~~~~~~~~~~~~~^~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/ui/ui_layer.cpp:483:51: warning: conversion from ‘int’ to ‘float’ may change value [-Wconversion]
  483 |                 float cx = ctx.finiteMap->getWidth() / 2.0f;
      |                            ~~~~~~~~~~~~~~~~~~~~~~~^~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/ui/ui_layer.cpp:484:52: warning: conversion from ‘int’ to ‘float’ may change value [-Wconversion]
  484 |                 float cz = ctx.finiteMap->getHeight() / 2.0f;
      |                            ~~~~~~~~~~~~~~~~~~~~~~~~^~
gmake[2]: *** [CMakeFiles/sisterapp.dir/build.make:415: CMakeFiles/sisterapp.dir/src/ui/ui_layer.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:90: CMakeFiles/sisterapp.dir/all] Error 2
gmake: *** [Makefile:91: all] Error 2
